--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,6 +427,11 @@ table td { text-overflow: ellipsis; overflow: hidden; max-width: 15em; }
 
 .output_text.output_execute_result pre { white-space: pre-wrap; }
 
+@media only screen and (max-width: 900px) { /* for mobile phone and tablet devices */
+  .output_wrapper { overflow: scroll; } }
+
+.svg-icon.orange { width: 30px; height: 23px; }
+
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
